--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This repo contains scripts used to generate figures and tables for the examples found in the manuscript *Generalized Bayesian MARS: Tools for Emulating Stochastic Computer Models* (link to paper when published). 
+This repo contains scripts used to generate figures and tables for the examples found in the manuscript [*Generalized Bayesian MARS: Tools for Emulating Stochastic Computer Models*](https://arxiv.org/pdf/2306.01911). 
 
   - **mcycle:** Script for quantile regression using the well-know motorcycle dataset. 
   - **Piston:** Scripts for performing simulation study comparison of GBASS package with several competitors on the stochatic Piston function.
