Updating after paper revisions

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ This repo contains scripts used to generate figures and tables for the examples 
   - **Fish:** Scripts for quantile regression comparison on the LogoNet "Fish capture recapture" agent based model.
   - **Epi:** Scripts for quantile-based sensitivity analysis of a stochastic SIR model with intervention. 
   - **qrsvm** A local copy of the qrsvm package which is (at the time of writing) inaccesible on CRAN. 
+  - **scaling** Script for the scaling study (as a function of input dimension) in the supplemental materials (by request of a reviewer.)
 
 
 To run these examples, the `GBASS` package ([found here](https://github.com/knrumsey/GBASS)) is needed. The `GBASS` package can be installed by typing:
